# radotech-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  RaDoTech.pro  main.cpp
data/: Radotech.db
data/sql/: dummy_data.sql  profile.sql  scan.sql  user.sql
docs/: final_team38_radotech.md
docs/videos/: 01_register.mkv  02_login.mkv  04_profile_delete.mkv
include/controllers/: DeviceController.h  HealthDataController.h  HealthMetricController.h  PowerManagementController.h  RecommendationsController.h  ScanController.h  UserController.h  UserInputController.h  UserProfileController.h
include/models/: BatteryModel.h  HealthDataModel.h  HealthMetricModel.h  ProfileModel.h  ScanModel.h  UserModel.h
include/tests/: DatabaseManagerTest.h  HealthMetricCalculatorTest.h  ProfileModelTest.h  ScanModelTest.h  Test.h  UserControllerTest.h  UserModelTest.h  UserProfileControllerTest.h
include/ui/: BackgroundDelegate.h  BuyWidget.h  ClickableLabel.h  DeviceImageWidget.h  HealthData.h  HealthMetric.h  HistoryWidget.h  HomeWidget.h  LearningMaterialsWidget.h  Logging.h  LoginWidget.h  MainWindow.h  MeasureNowWidget.h  ProfileEditWidget.h  ProfileWidget.h  ProfilesWidget.h  Recommendations.h  ResultsWidget.h  SettingsWidget.h  UserInput.h  UserProfile.h
include/utils/: DataProcessingManager.h  DatabaseManager.h  HealthMetricCalculator.h  Logging.h
resources/: dbData.qrc  dbSchema.qrc  resources.qrc
resources/sql/: dummy_data.sql  scan.sql  schema.sql  users.sql
src/: main.cpp
src/controllers/: DeviceController.cpp  HealthDataController.cpp  HealthMetricController.cpp  PowerManagementController.cpp  RecommendationsController.cpp  (+4 more)
tests/: TestDatabaseManager.cpp
(+36 files in other folders)
